--- a/app/views/layouts/test.liquid
+++ b/app/views/layouts/test.liquid
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="{{ 'css/app.css' | asset_url }}">
   </head>
 
-  <body class="font-sans antialiased leading-normal text-gray-700 bg-gray-100">
+  <body class="font-sans antialiased leading-normal text-content bg-page">
     <div class="container flex flex-col min-h-screen">
       <main class="flex-1">
         {{content_for_layout}}
