--- a/app/views/partials/theme/simple/admin/activities/index.liquid
+++ b/app/views/partials/theme/simple/admin/activities/index.liquid
@@ -1,6 +1,6 @@
 <div class="w-full p-3">
 
-	<form action="" class="md:flex flex-col md:flex-row w-full gap-2 p-2 bg-gray-200 rounded">
+	<form action="" class="md:flex flex-col md:flex-row w-full gap-2 p-2 bg-frame rounded">
 
 		<div class="flex items-center p-2">
 			<span class="capitalize mr-2">{{ 'admin.menu.activities.list.public' | t }}</span>
