--- a/app/views/partials/theme/simple/admin/dashboard/metrics.liquid
+++ b/app/views/partials/theme/simple/admin/dashboard/metrics.liquid
@@ -4,7 +4,7 @@
       <div class="h-full">
         <div class="flex justify-between items-end mb-2">
           <h3 class="text-lg font-semibold">Projects</h3>
-          <span class="text-5xl leading-none text-blue-700">2</span>
+          <span class="text-5xl leading-none text-interaction">2</span>
         </div>
         <div class="w-full h-4 bg-gray-300 rounded">
           <div class="h-full bg-blue-500" style="width: 62%;"></div>
