--- a/app/views/partials/theme/simple/admin/menu.liquid
+++ b/app/views/partials/theme/simple/admin/menu.liquid
@@ -3,42 +3,42 @@
 <div class="w-full">
   <ul class="flex flex-wrap text-lg text-gray-900">
     <li class="mb-5">
-      <a class="mr-2 px-3 py-2 {% if s == 'home' %}bg-gray-200{% endif %}" href='/admin'>
+      <a class="mr-2 px-3 py-2 {% if s == 'home' %}bg-frame{% endif %}" href='/admin'>
         {{ 'admin.menu.home' | t }}
       </a>
     </li>
     <li class="mb-5 mr-2">
-      <a class="px-3 py-2 {% if s == 'users' %}bg-gray-200{% endif %}" href='/admin/users'>
+      <a class="px-3 py-2 {% if s == 'users' %}bg-frame{% endif %}" href='/admin/users'>
         {{ 'admin.menu.users_title' | t }}
       </a>
     </li>
     <li class="mb-5 mr-2">
-      <a class="px-3 py-2 {% if s == 'orders' %}bg-gray-200{% endif %}" href='/admin/orders'>
+      <a class="px-3 py-2 {% if s == 'orders' %}bg-frame{% endif %}" href='/admin/orders'>
         {{ 'admin.menu.orders' | t }}
       </a>
     </li>
     <li class="mb-5 mr-2">
-      <a class="px-3 py-2 {% if s == 'items' %}bg-gray-200{% endif %}" href='/admin/items'>
+      <a class="px-3 py-2 {% if s == 'items' %}bg-frame{% endif %}" href='/admin/items'>
         {{ 'admin.menu.items' | t }}
       </a>
     </li>
     <li class="mb-5 mr-2">
-      <a class="px-3 py-2 {% if s == 'categories' %}bg-gray-200{% endif %}" href='/admin/categories'>
+      <a class="px-3 py-2 {% if s == 'categories' %}bg-frame{% endif %}" href='/admin/categories'>
         {{ 'admin.menu.categories' | t }}
       </a>
     </li>
     <li class="mb-5 mr-2">
-      <a class="px-3 py-2 {% if s == 'activities' %}bg-gray-200{% endif %}" href='/admin/activities'>
+      <a class="px-3 py-2 {% if s == 'activities' %}bg-frame{% endif %}" href='/admin/activities'>
         {{ 'admin.menu.activities.name' | t }}
       </a>
     </li>
     <li class="mb-5 mr-2">
-      <a class="px-3 py-2 {% if s == 'support-tickets' %}bg-gray-200{% endif %}" href='/admin/support-tickets'>
+      <a class="px-3 py-2 {% if s == 'support-tickets' %}bg-frame{% endif %}" href='/admin/support-tickets'>
         {{ 'admin.menu.support-tickets' | t }}
       </a>
     </li>
     <li class="mb-5 mr-2">
-      <a class="px-3 py-2 {% if s == 'setup' %}bg-gray-200{% endif %}" href='/marketplace_setup'>
+      <a class="px-3 py-2 {% if s == 'setup' %}bg-frame{% endif %}" href='/marketplace_setup'>
         {{ 'admin.menu.setup' | t }}
       </a>
     </li>
