--- a/app/views/partials/theme/simple/dashboard/groups/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/groups/index.liquid
@@ -4,42 +4,42 @@
       {{ 'app.groups.add' | t }}
     </a>
   </div>
-  <div class="my-6 bg-white rounded shadow-md">
+  <div class="my-6 bg-panel rounded shadow-md">
     {% if groups.results.size > 0 %}
       <table class="w-full text-left border-collapse">
         <thead>
           <tr>
-            <th class="px-6 py-4 text-sm font-bold uppercase border-b bg-grey-lightest text-grey-dark border-grey-light">
+            <th class="px-6 py-4 text-sm font-bold uppercase border-b">
               {{ "app.groups.picture" | t }}
             </th>
-            <th class="px-6 py-4 text-sm font-bold uppercase border-b bg-grey-lightest text-grey-dark border-grey-light">
+            <th class="px-6 py-4 text-sm font-bold uppercase border-b">
               {{ "app.groups.name" | t }}
             </th>
-            <th class="px-6 py-4 text-sm font-bold uppercase border-b bg-grey-lightest text-grey-dark border-grey-light">
+            <th class="px-6 py-4 text-sm font-bold uppercase border-b">
               {{ "app.groups.summary" | t }}
             </th>
-            <th class="px-6 py-4 text-sm font-bold uppercase border-b bg-grey-lightest text-grey-dark border-grey-light">
+            <th class="px-6 py-4 text-sm font-bold uppercase border-b">
               {{ "app.groups.actions" | t }}
             </th>
           </tr>
         </thead>
         <tbody>
           {% for group in groups.results %}
-            <tr class="hover:bg-grey-lighter">
-              <td class="px-6 py-4 border-b border-grey-light">
+            <tr>
+              <td class="px-6 py-4 border-b">
                 <a href="/groups/show/{{ group.id }}">
                   <img src="{{ group.main_photo.photo.versions.small | default: 'https://dummyimage.com/100x100' }}" class="object-cover object-center w-32 h-32" />
                 </a>
               </td>
-              <td class="px-6 py-4 border-b border-grey-light">
+              <td class="px-6 py-4 border-b">
                 <a href="/groups/show/{{ group.id }}">
                   {{ group.name }}
                 </a>
               </td>
-              <td class="px-6 py-4 border-b border-grey-light">
+              <td class="px-6 py-4 border-b">
                 {{ group.summary }}
               </td>
-              <td class="px-6 py-4 border-b border-grey-light">
+              <td class="px-6 py-4 border-b">
                 <a href="/dashboard/groups/edit?id={{ group.id }}" class="button">
                   Edit
                 </a>
