--- a/app/views/partials/theme/simple/dashboard/orders/checkout.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/checkout.liquid
@@ -4,8 +4,8 @@
   </h1>
 </div>
 
-<section class="p-8 text-gray-800 bg-white shadow-lg">
-  <ul class="text-lg lg:text-xl font-bold text-gray-800">
+<section class="p-8 bg-panel shadow-lg">
+  <ul class="text-lg lg:text-xl font-bold">
     <li class="flex gap-4 py-3 justify-between border-b">
       <div>{{ 'app.status' | t }}:</div>
       <div>{{ order.status.fullname | t }}</div>
