--- a/app/views/partials/theme/simple/layout/footer.liquid
+++ b/app/views/partials/theme/simple/layout/footer.liquid
@@ -1,8 +1,8 @@
-<footer class="mt-10 text-gray-700 border-t border-gray-300">
+<footer class="mt-10 border-t">
   <div class="container flex flex-col flex-wrap px-5 py-24 mx-auto md:items-center lg:items-start md:flex-row md:flex-nowrap">
     <div class="flex-shrink-0 w-64 mx-auto text-center md:mx-0 md:text-left">
-      <a href="/" class="flex items-center justify-center font-medium text-gray-900 md:justify-start">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 text-white bg-blue-500 rounded-full" viewBox="0 0 24 24">
+      <a href="/" class="flex items-center justify-center font-medium text-content md:justify-start">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 text-content-inverted bg-interaction rounded-full" viewBox="0 0 24 24">
           <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
         </svg>
         <span class="ml-3 text-xl">{{ 'app.title' | t }}</span>
@@ -12,16 +12,16 @@
 
     <div class="flex flex-wrap flex-grow mt-10 -mb-10 text-center md:pl-20 md:mt-0 md:text-left">
       <div class="w-full px-4 lg:w-1/4 md:w-1/2">
-        <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900">{{ 'app.footer.header.title.general' | t }}</h2>
+        <h2 class="mb-3 text-sm font-medium tracking-widest">{{ 'app.footer.header.title.general' | t }}</h2>
         <ul class="mb-10 leading-loose list-none">
           <li>
-            <a href="/" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.home' | t }}</a>
+            <a href="/" class="hover:text-content hover:underline">{{ 'app.footer.header.list.home' | t }}</a>
           </li>
           <li>
-            <a href="/about-us" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.about_us' | t }}</a>
+            <a href="/about-us" class="hover:text-content hover:underline">{{ 'app.footer.header.list.about_us' | t }}</a>
           </li>
           <li>
-            <a href="/terms-of-service" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.terms_of_service' | t }}</a>
+            <a href="/terms-of-service" class="hover:text-content hover:underline">{{ 'app.footer.header.list.terms_of_service' | t }}</a>
           </li>
         </ul>
       </div>
@@ -29,10 +29,10 @@
         <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900">{{ 'app.footer.header.title.join' | t }}</h2>
         <ul class="mb-10 leading-loose list-none">
           <li>
-            <a href="/sign-up" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.sign_up' | t }}</a>
+            <a href="/sign-up" class="hover:text-content hover:underline">{{ 'app.footer.header.list.sign_up' | t }}</a>
           </li>
           <li>
-            <a href="/sessions/new" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.log_in' | t }}</a>
+            <a href="/sessions/new" class="hover:text-content hover:underline">{{ 'app.footer.header.list.log_in' | t }}</a>
           </li>
         </ul>
       </div>
@@ -40,10 +40,10 @@
         <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900">{{ 'app.footer.header.title.support' | t }}</h2>
         <ul class="mb-10 leading-loose list-none">
           <li>
-            <a href="/contact-us" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.contact_us' | t }}</a>
+            <a href="/contact-us" class="hover:text-content hover:underline">{{ 'app.footer.header.list.contact_us' | t }}</a>
           </li>
           <li>
-            <a href="/faq" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.faq' | t }}</a>
+            <a href="/faq" class="hover:text-content hover:underline">{{ 'app.footer.header.list.faq' | t }}</a>
           </li>
         </ul>
       </div>
