--- a/app/views/partials/theme/simple/profile/nav.liquid
+++ b/app/views/partials/theme/simple/profile/nav.liquid
@@ -1,4 +1,4 @@
-<div class="mb-5 bg-white">
+<div class="mb-5 bg-panel">
   <nav class="flex flex-col sm:flex-row">
     {% assign active_class = 'text-blue-500 border-b-2 font-medium border-blue-500'  %}
     <a href="/{{path}}/{{ user.slug }}" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'activity' %}{{ active_class }}{% endif %}">
