--- a/app/views/partials/theme/simple/profile/user_card.liquid
+++ b/app/views/partials/theme/simple/profile/user_card.liquid
@@ -1,4 +1,4 @@
-<div class="h-full pt-5 overflow-hidden bg-white border border-gray-200 rounded-lg shadow-sm">
+<div class="h-full pt-5 overflow-hidden bg-panel border border-gray-200 rounded-lg shadow-sm">
   {% liquid
     assign img_url = user.avatar.photo.versions.small
     unless img_url
