--- a/scaffold/generators/crud/templates/views/partials/theme/simple/model/index.liquid
+++ b/scaffold/generators/crud/templates/views/partials/theme/simple/model/index.liquid
@@ -4,7 +4,7 @@
       {{ 'app.models.<%= modelNamePlural %>.add' | t }}
     </a>
   </div>
-  <div class="my-6 bg-white rounded shadow-md">
+  <div class="my-6 bg-panel rounded shadow-md">
     {% if <%= modelNamePlural %>.results.size > 0 %}
       <table class="w-full text-left border-collapse">
         <thead>
