--- a/app/views/partials/theme/simple/admin/recent.liquid
+++ b/app/views/partials/theme/simple/admin/recent.liquid
@@ -2,12 +2,12 @@
   <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
     {% for metric in metrics %}
 	  <div class="w-full">
-        <div class="bg-white border rounded shadow">
+        <div class="bg-panel border rounded shadow">
           <div class="flex items-center justify-between px-4 py-3 border-b">
             <h3 class="text-lg font-heading">
               {{ 'admin.metric.'| append: metric.name | append: ".name" | t }}
             </h3>
-            <span class="px-3 py-1 text-sm font-semibold text-white bg-green-700 rounded-full">
+            <span class="px-3 py-1 text-sm font-semibold text-white bg-confirmation rounded-full">
               {{ 'admin.metric.period.'| append: metric.period | t }}
             </span>
           </div>
@@ -22,7 +22,7 @@
             <span>
               {{ 'admin.metric.' | append: metric.name | append: '.delta' | t }}
             </span>
-            <span class="text-lg text-green-700">
+            <span class="text-lg text-confirmation">
               {% if metric.name == 'income' %}
                 {{ metric.delta | pricify_cents }}
               {% else %}
