--- a/app/views/partials/theme/simple/authentication_links/new.liquid
+++ b/app/views/partials/theme/simple/authentication_links/new.liquid
@@ -4,7 +4,7 @@
       <h1 class="text-3xl font-medium">{{ 'app.account.reset_password.title' | t }}</h1>
     </div>
 
-    <div class="w-full p-8 mx-auto mt-10 bg-gray-200 rounded-lg lg:w-2/6 md:w-1/2 md:mt-0">
+    <div class="w-full p-8 mx-auto mt-10 bg-frame rounded-lg lg:w-2/6 md:w-1/2 md:mt-0">
       <form action="/authentication_links/create" method="post">
         {% include 'authenticity_token' %}
 
