--- a/app/views/partials/theme/simple/contacts/show.liquid
+++ b/app/views/partials/theme/simple/contacts/show.liquid
@@ -1,4 +1,4 @@
-<article class="p-8 text-gray-800 bg-white shadow-lg rounded">
+<article class="p-8 text-gray-800 bg-panel shadow-lg rounded">
 
   <h1 class="mb-5 border-b text-4xl font-medium">
     contact - {{ contact.id }}
