--- a/app/views/partials/theme/simple/faq.liquid
+++ b/app/views/partials/theme/simple/faq.liquid
@@ -12,7 +12,7 @@
         {% for item in questions %}
           {% assign value = item[1] %}
           <details class="mb-4">
-            <summary class="cursor-pointer font-semibold  bg-gray-200 rounded-md py-2 px-4">
+            <summary class="cursor-pointer font-semibold bg-panel rounded-md py-2 px-4">
               {{ value.question }}
             </summary>
 
@@ -27,7 +27,7 @@
         {% for item in questions %}
           {% assign value = item[1] %}
           <details class="mb-4">
-            <summary class="cursor-pointer font-semibold  bg-gray-200 rounded-md py-2 px-4">
+            <summary class="cursor-pointer font-semibold bg-panel rounded-md py-2 px-4">
               {{ value.question }}
             </summary>
 
