--- a/app/views/partials/theme/simple/groups/about.liquid
+++ b/app/views/partials/theme/simple/groups/about.liquid
@@ -1,8 +1,8 @@
 <div class="flex">
-  <div class="w-2/3 p-5 bg-white md:mr-10">
+  <div class="w-2/3 p-5 bg-panel md:mr-10">
     <img class="object-cover object-center w-full h-64" src="{{ group.main_photo.photo.versions.uncropped | default: 'https://dummyimage.com/720x400' }}" alt="blog">
 
-    <h1 class="mt-5 mb-10 text-2xl font-medium text-gray-700">
+    <h1 class="mt-5 mb-10 text-2xl font-medium">
       {{ group.name }}
     </h1>
 
@@ -21,7 +21,7 @@
       </p>
     </div>
   </div>
-  <div class="w-1/3 p-5 pt-10 bg-white">
+  <div class="w-1/3 p-5 pt-10 bg-panel">
     <h3 class="text-xl"> {{ 'app.groups.members' | t }} ({{ list.total_entries }})</h3>
     <div class="flex flex-wrap">
       {% for relationship in list.results %}
