--- a/app/views/partials/theme/simple/groups/card.liquid
+++ b/app/views/partials/theme/simple/groups/card.liquid
@@ -1,4 +1,4 @@
-<div class="overflow-hidden bg-white rounded-lg">
+<div class="overflow-hidden bg-panel rounded-lg">
   <a href="{% render 'link_to', group: group %}">
     <img class="object-cover object-center w-full lg:h-48 md:h-36" src="{{ group.main_photo.photo.versions.small | default: 'https://dummyimage.com/720x400' }}" alt="blog">
   </a>
@@ -14,13 +14,13 @@
       {% if current_profile %}
         {% render 'theme/simple/groups/join_button', current_profile: current_profile, group: group %}
       {% endif %}
-      <span class="inline-flex items-center py-1 pr-3 ml-auto mr-3 text-sm leading-none text-gray-600 border-r-2 border-gray-300 lg:ml-auto md:ml-0">
+      <span class="inline-flex items-center py-1 pr-3 ml-auto mr-3 text-sm leading-none border-r-2 lg:ml-auto md:ml-0">
         <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
           <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
           <circle cx="12" cy="12" r="3"></circle>
         </svg>1.2K
       </span>
-      <span class="inline-flex items-center text-sm text-gray-600">
+      <span class="inline-flex items-center text-sm">
         <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
           <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
         </svg>6
