--- a/app/views/partials/theme/simple/home/category.liquid
+++ b/app/views/partials/theme/simple/home/category.liquid
@@ -1,4 +1,4 @@
-<div class="flex flex-col bg-white rounded shadow">
+<div class="flex flex-col bg-panel rounded shadow">
   <a class="block w-full h-64 overflow-hidden rounded-tl rounded-tr" href="{% render 'link_to', category: object.key %}">
     <img alt="{{ object.key }}" class="block object-cover object-center w-full h-full" src="https://dummyimage.com/800x4:3/000/fff&text={{ object.key | t: scope: 'categories' }}">
   </a>
@@ -6,7 +6,7 @@
   <div class="p-4">
 
     <!-- TODO: If empty, dont show. -->
-    <h2 class="text-lg font-medium text-gray-900">
+    <h2 class="text-lg font-medium">
       <a href="{% render 'link_to', category: object.key %}">{{ object.key | t: scope: 'categories'  }}</a>
     </h2>
     <p class="mt-2 break-all">
