--- a/app/views/partials/theme/simple/home/hero.liquid
+++ b/app/views/partials/theme/simple/home/hero.liquid
@@ -1,6 +1,6 @@
-<div class="relative flex items-end mb-8 overflow-hidden text-white bg-cover rounded-md min-h-64 flex-column" style="background-image: url({{ 'images/home-hero.jpg' | asset_url }})">
+<div class="relative flex items-end mb-8 overflow-hidden text-content-inverted bg-cover rounded-md min-h-64 flex-column" style="background-image: url({{ 'images/home-hero.jpg' | asset_url }})">
   <!-- Trick to speed up hero image loading -->
-  <img src="{{ 'images/home-hero.jpg' | asset_url }}" alt="Hero image" class="hidden" />
+  <img src="{{ 'images/home-hero.jpg' | asset_url }}" alt="Hero image" class="hidden">
   <div class="absolute top-0 left-0 w-full h-full bg-black bg-opacity-50"></div>
   <div class="z-10 w-full p-8 md:p-16">
     <h1 class="text-2xl font-black leading-none uppercase md:text-5xl">{{ 'app.hero.main-sentence' | t }}</h1>
