--- a/app/views/partials/theme/simple/statuses/index.liquid
+++ b/app/views/partials/theme/simple/statuses/index.liquid
@@ -4,7 +4,7 @@
       {{ 'app.models.statuses.add' | t }}
     </a>
   </div>
-  <div class="my-6 bg-white rounded shadow-md">
+  <div class="my-6 bg-panel rounded shadow-md">
     {% if statuses.results.size > 0 %}
       <table class="w-full text-left border-collapse">
         <thead>
