--- a/modules/monitoring/public/views/partials/theme/feedback_with_modal.liquid
+++ b/modules/monitoring/public/views/partials/theme/feedback_with_modal.liquid
@@ -1,5 +1,5 @@
 <div class="absolute bottom-0 right-0 mb-8 mr-8">
-  <a href="https://www.surveymonkey.com/r/JZLSJ7H" target="_blank" id="openBtn" class="px-4 py-2 bg-white border-gray-400 rounded-lg shadow-md">
+  <a href="https://www.surveymonkey.com/r/JZLSJ7H" target="_blank" id="openBtn" class="px-4 py-2 bg-panel border-gray-400 rounded-lg shadow-md">
     Feedback survey
     <svg class="inline w-6" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
