Seo friendly urls for questions

--- a/app/views/partials/link_to.liquid
+++ b/app/views/partials/link_to.liquid
@@ -33,7 +33,8 @@
   endif
 
   if post
-    print "/posts/show/" | append: post.id
-    return "/posts/show/" | append: post.id
+    assign slug = post.title | slugify | append: '-' | append: post.id
+    print "/posts/" | append: slug
+    return "/posts/" | append: slug
   endif
 %}
