Use slug to get the post's id

--- a/app/views/pages/posts/show.liquid
+++ b/app/views/pages/posts/show.liquid
@@ -1,10 +1,10 @@
 ---
-slug: posts/show
+slug: posts/:slug
 ---
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: false
 
-  assign post_id = context.params.slug3 | split: '-' | last
+  assign post_id = context.params.slug | split: '-' | last
   function post = 'lib/queries/posts/find', id: post_id
   include 'lib/present_or_404', property: post.id
 
