--- a/app/views/partials/lib/commands/posts/update/build.liquid
+++ b/app/views/partials/lib/commands/posts/update/build.liquid
@@ -1,3 +1,4 @@
+{% assign slug = object.title | slugify | append: '-' | append: object.id %}
 {% parse_json object %}
   {
     "id": {{ object.id | json }},
@@ -7,7 +8,8 @@
     "upvote_profile_ids": {{ object.upvote_profile_ids | json }},
     "downvote_profile_ids": {{ object.downvote_profile_ids | json }},
     "accepted_post_id": {{ object.accepted_post_id | json }},
-    "c__score": {{ object.c__score | json }}
+    "c__score": {{ object.c__score | json }},
+     "current_slug": {{ slug | json }}
   }
 {% endparse_json %}
 
