changes Add to register form checkbox with possibility to accept terms of service condition

--- a/app/views/partials/lib/commands/users/create/build.liquid
+++ b/app/views/partials/lib/commands/users/create/build.liquid
@@ -3,6 +3,7 @@
     "email":       {{ object.email | json }},
     "password":    {{ object.password | json }},
     "uuid":        {{ '' | uuid | json }},
+    "agreed":       {{ object.agreed | json }},
     "remember_me": true
   }
 {% endparse_json %}
