--- a/app/views/partials/lib/commands/users/create/check.liquid
+++ b/app/views/partials/lib/commands/users/create/check.liquid
@@ -14,6 +14,10 @@
     include 'lib/register_error', contract: c, field_name: 'password', key: 'app.errors.blank'
   endif
 
+  if object.agreed == blank
+    include 'lib/register_error', contract: c, field_name: 'agreed', key: 'app.errors.must_be_selected'
+  endif
+
   hash_assign object['valid'] = c.valid
   hash_assign object['errors'] = c.errors
 
