--- a/app/views/partials/f_link_to.liquid
+++ b/app/views/partials/f_link_to.liquid
@@ -1,4 +1,5 @@
 {% liquid
+  log object
   case object.type
 
   when 'group'
@@ -16,6 +17,9 @@
 
   when 'comment'
     return "/comments/" | append: object.id
+
+  when 'post'
+    return "/posts/show/" | append: object.id
 
   else
     return null
