--- a/app/views/partials/lib/queries/activities/model.liquid
+++ b/app/views/partials/lib/queries/activities/model.liquid
@@ -27,5 +27,7 @@
   function url = 'f_link_to', object: model
   hash_assign model['url'] = url
 
+  hash_assign model['name'] = model['name'] | default: model['title']
+
   return model
 %}
