--- a/app/views/partials/theme/simple/admin/activities/index.liquid
+++ b/app/views/partials/theme/simple/admin/activities/index.liquid
@@ -10,7 +10,9 @@
 		<select name="feed" class="md:w-5/6 form-select">
 			<option value="">{{ 'admin.menu.activities.list.audit' | t }}</option>
 			<option value="system.1" {% if params.feed == "system.1" %}selected{% endif %}>{{ 'admin.menu.activities.list.all' | t }}</option>
-			<option value="system.2" {% if params.feed == "system.2" %}selected{% endif %}>{{ 'admin.menu.activities.list.comments' | t }}</option>
+      <option value="system.2" {% if params.feed == "system.2" %}selected{% endif %}>{{ 'admin.menu.activities.list.comments' | t }}</option>
+      <option value="system.6" {% if params.feed == "system.6" %}selected{% endif %}>{{ 'admin.menu.activities.list.questions' | t }}</option>
+      <option value="system.7" {% if params.feed == "system.7" %}selected{% endif %}>{{ 'admin.menu.activities.list.answers' | t }}</option>
 
 			{% for user in users.results %}
 				{% assign feed = "user." | append: user.id %}
