Color class replacement round 2

--- a/app/views/partials/theme/simple/payments/account/failure.liquid
+++ b/app/views/partials/theme/simple/payments/account/failure.liquid
@@ -1,4 +1,4 @@
-<div class="border rounded bg-gs-soft-grey px-8 py-6 mb-4" data-test="information">
+<div class="border rounded px-8 py-6 mb-4" data-test="information">
   <p class="text-gs-red w-100" role="alert">
     {{ 'app.payments.account.failure.failed_adding_account' | t }}
   </p>
