--- a/app/views/partials/theme/simple/quick_search/card.liquid
+++ b/app/views/partials/theme/simple/quick_search/card.liquid
@@ -15,7 +15,7 @@
 
     <div class="mt-4">
       {% if url %}
-        <h2 class="text-lg font-medium text-gray-900 ">
+        <h2 class="text-lg font-medium">
           <a href="{{ url }}">{{ model.name }}</a>
         </h2>
       {% endif %}
