--- a/app/views/partials/theme/simple/users/new.liquid
+++ b/app/views/partials/theme/simple/users/new.liquid
@@ -3,7 +3,7 @@
     <h1 class="text-2xl">{{ 'app.users.create_account' | t }}</h1>
   </div>
 
-  <div class="w-full p-8 mx-auto mt-10 bg-gray-200 rounded-lg shadow-md lg:w-2/6 md:w-1/2 md:mt-0">
+  <div class="w-full p-8 mx-auto mt-10 bg-panel rounded-lg shadow-md lg:w-2/6 md:w-1/2 md:mt-0">
     {% include 'theme/simple/users/form' %}
   </div>
 </div>
