--- a/app/views/partials/theme/simple/orders/success.liquid
+++ b/app/views/partials/theme/simple/orders/success.liquid
@@ -1,4 +1,4 @@
-<div class="p-4 mb-4 bg-gray-200 border rounded" data-test="information">
+<div class="p-4 mb-4 border rounded" data-test="information">
   <p>
     {{ 'app.orders.checkout.success' | t }}
   </p>
