--- a/app/views/partials/lib/validations/presence.liquid
+++ b/app/views/partials/lib/validations/presence.liquid
@@ -5,7 +5,7 @@
 {% endcomment %}
 {% liquid
   if object[field_name] == blank
-    include 'lib/register_error', contract: c, field_name: field_name, key: 'app.errors.blank'
+    include 'lib/register_error', contract: c, field_name: field_name, key: key
   endif
   return c
 %}
