--- a/app/views/partials/lib/consumers/post_created/activity_feeds.liquid
+++ b/app/views/partials/lib/consumers/post_created/activity_feeds.liquid
@@ -5,10 +5,10 @@
 
 {% liquid
   function audience = 'lib/queries/activities/users/audience', id: event.actor.id
-  render 'lib/commands/activities/publish', uuid: event.uuid, type: "user-private", ids: audience
 
-  render 'lib/commands/activities/publish', uuid: event.uuid, type: "user-private", ids: event.actor.id
-  render 'lib/commands/activities/publish', uuid: event.uuid, type: "user-public", ids: event.actor.id
+  function publish = 'lib/commands/activities/publish', uuid: event.uuid, type: "user-private", ids: audience
+  function publish = 'lib/commands/activities/publish', uuid: event.uuid, type: "user-private", ids: event.actor.id
+  function publish = 'lib/commands/activities/publish', uuid: event.uuid, type: "user-public", ids: event.actor.id
 %}
 
 {% comment %} system:audit {% endcomment %}
