--- a/app/views/partials/lib/validations/presence.liquid
+++ b/app/views/partials/lib/validations/presence.liquid
@@ -2,13 +2,13 @@
   params: @object
           @field_name
           @c
+          @key[optional]
 {% endcomment %}
+
 {% liquid
   if object[field_name] == blank
-
-  assign key = key | default: "app.errors.blank"
-
-  include 'lib/register_error', contract: c, field_name: field_name, key: key
+    assign key = key | default: "app.errors.blank"
+    include 'lib/register_error', contract: c, field_name: field_name, key: key
   endif
   return c
 %}
