--- a/app/views/partials/theme/simple/items/follow.js.liquid
+++ b/app/views/partials/theme/simple/items/follow.js.liquid
@@ -19,7 +19,7 @@
         body: JSON.stringify({
           user_id: user_id,
           action_name: action,
-          authenticity_token: {{ authenticity_token | json }}
+          authenticity_token: "{{ authenticity_token }}"
         }),
       })
         .then(response => response.json())
