--- a/app/views/partials/lib/commands/posts/update/build.liquid
+++ b/app/views/partials/lib/commands/posts/update/build.liquid
@@ -9,7 +9,7 @@
     "downvote_profile_ids": {{ object.downvote_profile_ids | json }},
     "accepted_post_id": {{ object.accepted_post_id | json }},
     "c__score": {{ object.c__score | json }},
-     "current_slug": {{ slug | json }}
+    "slug": {{ slug | json }}
   }
 {% endparse_json %}
 
